infra/k8s-dev/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - host: tusks.dev
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000

          - path: /api/boards
            pathType: Prefix
            backend:
              service:
                name: board-srv
                port:
                  number: 3000

          - path: /api/lists
            pathType: Prefix
            backend:
              service:
                name: board-srv
                port:
                  number: 3000

          - path: /api/cards
            pathType: Prefix
            backend:
              service:
                name: board-srv
                port:
                  number: 3000

          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: payments-srv
                port:
                  number: 3000

          - path: /api/accounts
            pathType: Prefix
            backend:
              service:
                name: accounts-srv
                port:
                  number: 3000

          - path: /api/email
            pathType: Prefix
            backend:
              service:
                name: email-srv
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
